[metadata]
name = x7
author = Glenn Gribble
author_email = dev@gribbelus.com
description = Top level project for X7 libraries
long_description = file: README.rst
version = attr: x7.x7.__version__
url = https://github.com/gribbg/x7
keywords =
#  cool printing
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license_files =
    LICENSE.txt

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
# numpy

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
#  some_program = some_package:__main__:cli
